apps/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: default
spec:
  selector:
    app: jellyfin
  ports:
    - name: http
      port: 8096
      targetPort: http
      protocol: TCP
  type: ClusterIP
